[package]
name = "evolution-island"
version = "0.2.0"
authors = []
edition = "2018"

[dependencies]
rand = "0.7.3"
log = "0.4.8"
smart-default = "0.6.0"
serde = "1.0.114"
thread_profiler = "0.3.0"

# TODO: find a way to update the features based on which platform is targeted
# MacOS needs the metal feature while other platforms use vulkan.
[dependencies.amethyst]
branch = "REFERENCE/profiled_frame_limiter/0.15.0"
features = ["vulkan", "gltf"]
git = "https://github.com/saveriomiroddi/amethyst-dev"

[features]
profiler = [
    "thread_profiler/thread_profiler",
    "amethyst/profiler"
]


